# TeaWeb

./: .gitignore  .gitmodules  .svgo.yml  .travis.yml  ChangeLog.md  ISSUE_TEMPLATE.md  README.md  WSSTest.html  WSSTest.ts  babel.config.js  babel.config.ts  file.ts  files.php  index.html  index.php  package-lock.json  package.json  postcss.config.ts  public_files.sh  setup.md  setup_devel_environment.md  setup_old.md  setup_windows.md  templates.html  todo.md  todo.txt  tsbaseconfig.json  tsconfig.json  webpack-client.config.ts  webpack-web.config.ts  webpack.config.js  webpack.config.ts
animates/: A.html  animation.js
asm/: .gitignore  CMakeLists.txt  build.sh  download_compiled_files.sh  init.js  make_opus.sh
asm/identity/: INIReader.h  Identity.cpp  TeamSpeakIdentity.cpp  base64.h
asm/libs/opus/: a.out  a.out.js
asm/src/: Identity.h  WebASMTest.cpp  opus.cpp
auth/: .gitignore  auth.php  info.php  login.php  xf
auth/css/: auth.scss
auth/js/: auth.js  auth.ts
client/: .gitignore  api.php  generate_packed.sh
client-api/: .gitignore  api.php
client/app/: EntryPointPopoutModal.ts  external.d.ts  index.scss  index.ts
client/app-definitions/: index.d.ts  native_api.d.ts
client/css/: main.css  main.scss
client/declarations/: exports.d.ts  imports_shared.d.ts
client/js/: index.ts  teaforo.ts
client/tsconfig/: tsconfig_packed.json
css/: auth.css  control_bar.scss  general.css  loader.css.map  loader.scss  modals.css  modals.css.map  modals.scss
css/frame/: SelectInfo.css  SelectInfo.scss
css/music/: info_plate.css  info_plate.css.map  info_plate.scss
css/ts/: chat.css  client.css  icons.css  tab.css
documentation/: file-structure.md  i18n.md
enviroment/: .htaccess  auth.php  certs  login.php  templates.html
enviroment/js/: TeaWeb-Native.js  assembly  auth.js  client.min.js  load.js
js/: FileManager.js  FileManager.js.map  FileManager.ts  Identity.ts  InfoBar.js  InfoBar.js.map  InfoBar.ts  chat.js  chat.js.map  chat.ts  client.js  client.js.map  client.ts  connection.js  connection.js.map  connection.ts  contextMenu.js  contextMenu.js.map  contextMenu.ts  load.ts  log.ts  main.js  main.js.map  main.ts  proto.js  proto.js.map  proto.ts  settings.js  settings.js.map  settings.ts  voice.js  voice.js.map  voice.ts
js/codec/: BasicCodec.ts  Codec.js  Codec.js.map  Codec.ts  CodecWrapper.ts  RawCodec.ts  compile.sh  tsconfig.json
js/crypto/: sha.ts
js/permission/: GroupManager.js  GroupManager.js.map  GroupManager.ts  PermissionManager.js  PermissionManager.js.map  PermissionManager.ts
js/ui/: ControlBar.js  ControlBar.js.map  ControlBar.ts  MusicClient.ts  channel.js  channel.js.map  channel.ts  client.js  client.js.map  client.ts  server.js  server.js.map  server.ts  view.js  view.js.map  view.ts
js/utils/: helpers.ts  modal.js  modal.js.map  modal.ts  tab.js  tab.js.map  tab.ts
js/voice/: AudioController.js  AudioController.js.map  AudioController.ts  AudioResampler.js  AudioResampler.js.map  AudioResampler.ts  VoiceHandler.js  VoiceHandler.js.map  VoiceHandler.ts  VoiceRecorder.js  VoiceRecorder.js.map  VoiceRecorder.ts
js/workers/: WorkerCodec.js  WorkerCodec.js.map  (+1 more)
loader/: IndexGenerator.ts  files.php  index.ejs  webpack.config.js
scripts/: build.sh  build_declarations.sh  build_web.sh  build_web_release.sh  cleanup.sh  client_build.sh  deploy_ui_files.sh  git-release.sh  git_index.sh  helper.sh  install_dependencies.sh  package_web_release.sh  resolve_commands.sh  travis.sh  travis_deploy.sh  travis_deploy_dev_server.sh  travis_deploy_github.sh  web_build.sh  web_package.sh
shared/: .gitignore  CountryIconFixup.ts  declaration_fix.d.ts  fix-imports.ts  generate_declarations.sh  generate_i18n_gtranslate.py  generate_i18n_gtranslate.ts  generate_packed.sh  generate_translations.sh  generate_voice.py  test.json
test/: client.html  index.php  opus.html  videoplayback.opus  webrtc.js
tools/: .gitignore  build_dtsgen.sh  build_trgen.sh
tsconfig/: tsconfig_base.json  tsconfig_debug.json  tsconfig_release.json  tsconfig_shared.json  tsconfig_web_app.json  tsconfig_web_app_packaged.json  tsconfig_web_preload.json
web/: .gitignore  generate_packed.sh  tsdeclaration.json
web/audio-lib/: Cargo.toml
web/audio-lib/src/: audio.rs  audio_client.rs  lib.rs
web/audio-lib/src/audio/: codec.rs  converter.rs  decoder.rs  packet_queue.rs
web/audio-lib/src/audio/codec/: opus.rs
webpack/: DevelBlocks.ts  EJSGenerator.ts  GeneratedAssetPlugin.ts  HtmlWebpackInlineSource.ts  ManifestPlugin.ts  WatLoader.ts  build-definitions.d.ts
(+1091 files in other folders)
